...
  return ListView.builder(
    padding: const EdgeInsets.all(8),
    itemCount: practices.length,
    itemBuilder: (BuildContext context, int index) {
      if (index == activePractice) {
        return Card(
          key: const Key('ActivePractice'),
          elevation: 3,
          color: Theme.of(context).colorScheme.primary,
          child: ListTile(
            leading: CircleAvatar(
              backgroundColor: Colors.white,
              child: Text(
...
